# MNIST-Digit-Prediction

./: .gitignore  README.md  app.py  main.py  model.py  pyproject.toml  requirements.txt  train.py  utils.py
docs/: architecture.md  architecture_diagram.html  highlights.md
templates/: index.html
